--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -8,7 +8,8 @@ ktor {
     }
 }
 jwt {
-    domain = "https://jwt-provider-domain/"
-    audience = "jwt-audience"
-    realm = "ktor sample app"
+    domain = "https://0.0.0.0:9001/"
+    audience = "unknown"
+    secret = "secret"
+    realm = "unknown server"
 }
