--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -9,6 +9,7 @@ ktor {
 }
 jwt {
     domain = "https://0.0.0.0:9001/"
+    issuer = "https://0.0.0.0:9001/jwt"
     audience = "unknown"
     realm = "unknown server"
 }
