--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Aug 01 12:23:31 MSK 2022
-sdk.dir=C\:\\Users\\User-KP1\\AppData\\Local\\Android\\Sdk
+#Mon Sep 12 09:26:29 MSK 2022
+sdk.dir=C\:\\Users\\Android dev\\AppData\\Local\\Android\\Sdk
